--- a/css/list-of-apps.css
+++ b/css/list-of-apps.css
@@ -132,6 +132,20 @@ main .content .header .new {
 main .content .header .new img {
   margin-left: 5px;
 }
+main .content .header .new-app-container {
+  width: 620px;
+  max-height: 1723px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 999;
+  background-color: white;
+  border: 1px solid #CED7DF;
+  border-radius: 4px;
+}
+main .content .header .new-app-container .new-app {
+  margin: 45px;
+}
 main .content .header ul {
   list-style: none;
   margin-bottom: 50px;
@@ -193,6 +207,7 @@ main .content .filter .open-filter:active {
   background: #b9bfc5;
 }
 main .content .filter .list {
+  z-index: 10;
   margin-top: 20px;
   position: absolute;
   max-height: 0;
@@ -310,13 +325,15 @@ main .content .app .text div {
   margin-right: 2em;
   white-space: nowrap;
 }
-main .content .app .text div span {
+main .content .app .text span {
   font-weight: 550;
   font-size: 16px;
   line-height: 150%;
+  white-space: pre;
 }
 main .content .app .actions {
   display: flex;
+  position: relative;
 }
 main .content .app .actions .submit-reject, main .content .app .actions .submit-delete, main .content .app .actions .submit-give {
   outline: none;
@@ -361,6 +378,80 @@ main .content .app .actions .submit-delete:hover {
 main .content .app .actions .submit-delete:active {
   background: #da7b7bb4;
 }
+main .content .app .actions .take-sure {
+  font-weight: 550;
+  letter-spacing: 0.5px;
+  line-height: 150%;
+}
+main .content .app .actions .take-close {
+  border: none;
+  background: none;
+  position: relative;
+  top: -15px;
+  outline: none;
+  cursor: pointer;
+}
+main .content .app .actions .take-yes {
+  margin-right: 30px;
+  width: 90px;
+  height: 40px;
+  background: #60BC87;
+  border-radius: 4px;
+  border: none;
+  color: white;
+  font-weight: 550;
+  font-size: 16px;
+  line-height: 16px;
+  outline: none;
+  cursor: pointer;
+}
+main .content .app .actions .take-yes:hover {
+  background: #60bc86d7;
+}
+main .content .app .actions .take-yes:active {
+  background: #60bc86b4;
+}
+main .content .app .actions .take-no {
+  margin-right: 30px;
+  width: 90px;
+  height: 40px;
+  background: #DA7B7B;
+  border-radius: 4px;
+  border: none;
+  color: white;
+  font-weight: 550;
+  font-size: 16px;
+  line-height: 16px;
+  outline: none;
+  cursor: pointer;
+}
+main .content .app .actions .take-no:hover {
+  background: #da7b7bd5;
+}
+main .content .app .actions .take-no:active {
+  background: #da7b7bb4;
+}
+main .content .app .actions .warning-container {
+  z-index: 5;
+  max-height: 0px;
+  overflow: hidden;
+  position: absolute;
+  left: 230px;
+  top: -180px;
+  transition: 0.05s ease-out;
+  background: #FCFDFE;
+  border-radius: 4px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+}
+main .content .app .actions .warning-container .warning {
+  padding: 15px;
+}
+main .content .app .actions .warning-container .warning div {
+  margin: 10px 10px 20px 10px;
+}
+main .content .app .actions .warning-container .warning .take-close {
+  left: 90px;
+}
 main .content .app .actions .reject-conf-container {
   max-height: 0px;
   overflow: hidden;
@@ -378,63 +469,8 @@ main .content .app .actions .reject-conf-container .reject-conf {
 main .content .app .actions .reject-conf-container .reject-conf div {
   margin: 10px 10px 20px 10px;
 }
-main .content .app .actions .reject-conf-container .reject-conf div .take-sure {
-  font-weight: 550;
-  letter-spacing: 0.5px;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-close {
-  border: none;
-  background: none;
-  position: relative;
-  left: 127px;
-  top: -15px;
-  outline: none;
-  cursor: pointer;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-text {
-  font-size: 14px;
-  line-height: 150%;
-  color: #596C77;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-yes {
-  margin-right: 30px;
-  width: 90px;
-  height: 40px;
-  background: #60BC87;
-  border-radius: 4px;
-  border: none;
-  color: white;
-  font-weight: 550;
-  font-size: 16px;
-  line-height: 16px;
-  outline: none;
-  cursor: pointer;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-yes:hover {
-  background: #60bc86d7;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-yes:active {
-  background: #60bc86b4;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-no {
-  margin-right: 30px;
-  width: 90px;
-  height: 40px;
-  background: #DA7B7B;
-  border-radius: 4px;
-  border: none;
-  color: white;
-  font-weight: 550;
-  font-size: 16px;
-  line-height: 16px;
-  outline: none;
-  cursor: pointer;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-no:hover {
-  background: #da7b7bd5;
-}
-main .content .app .actions .reject-conf-container .reject-conf div .take-no:active {
-  background: #da7b7bb4;
+main .content .app .actions .reject-conf-container .reject-conf .take-close {
+  left: 125px;
 }
 
 #pagination {
